...
                                </connections>
                            </containerView>
                            <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tap to see answer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yz0-Vw-ZNI">
                                <rect key="frame" x="20" y="572" width="560" height="20"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <textView multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" editable="NO" text="What is one right or freedom from the First Amendment?" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aDA-WY-bM6">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="328"/>
                                <accessibility key="accessibilityConfiguration" identifier="prompt"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
                                <rect key="frame" x="0.0" y="336" width="600" height="60"/>
                                <color key="backgroundColor" red="0.0" green="0.59999999999999998" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="answer1"/>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <color key="tintColor" red="0.0" green="0.59999999999999998" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
                                <state key="normal" title="False">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <color key="backgroundColor" red="0.027450980390000001" green="0.52549019610000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
                                <state key="normal" title="True">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="800" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type your answer" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kvH-OW-jAD" customClass="TextF
                                <rect key="frame" x="20" y="308" width="560" height="17"/>
                                <accessibility key="accessibilityConfiguration" identifier="fillblank"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="done"/>
...
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="760" verticalCompressionResistancePriority="760" bounces="NO" editable="NO" text="What is one right or freedom from the First Amendment?" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="YRG-Jt-MZQ">
                                <rect key="frame" x="20" y="246" width="560" height="298"/>
                                <accessibility key="accessibilityConfiguration" identifier="response"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
