...
        
        //Return Result
        return dateWithHoursAdded
    }
    
    func toRFC() -> String {
        let locale = Locale(identifier: "en_US")
        let timeZone = TimeZone(identifier: "GMT")
        let dateFormatter = DateFormatter()
        dateFormatter.locale = locale //need locale for some iOS 9 verision, will not select correct default locale
        dateFormatter.timeZone = timeZone
        dateFormatter.dateFormat = Date.RFC
        return dateFormatter.string(from: self)
    }
...
