...
                "name": self.name.text as Optional<AnyObject>,
                "email": self.email.text as Optional<AnyObject>,
                "message": self.message.text as Optional<AnyObject>
                ], error: {_ in
                    doMain(self.done)
                }) {(json) in
                    let _ = self.showDialog(NSLocalizedString("Thank you!  Someone will be in touch shortly", comment: "Message after user submits a contact us message"), NSLocalizedString("Done", comment: "Button to dismiss the contact us process after submit")) {
                        self.performSegue(withIdentifier: "last", sender: self)
                        doMain(self.done)
                    }
            }
        })
    }
...
